--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "description": "",
   "devDependencies": {
     "@chainlink/contracts": "^1.3.0",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.23.0"
-  },
-  "dependencies": {
     "@chainlink/env-enc": "^1.0.5",
-    "dotenv": "^16.5.0"
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "dotenv": "^16.5.0",
+    "hardhat": "^2.23.0",
+    "hardhat-deploy": "^1.0.2"
   }
 }
